--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <title>Homework 17</title>
     <link href="css/style.css" type="text/css" rel="stylesheet">
   </head>
-
-  <body>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="js/index.js"></script>
+  <body>
+   
     <!-- Navigation, Logo, Resume -->
     <header>
       <ul>
-        <li><a href = "#home">Home</a></li>
-        <li><a href = "#work">Work</a></li>
-        <li><a href= "#about">About</a></li>
-        <li><a href = "#contact">Contact</a></li>
+        <li><a href = "#home" data-page="home">Home</a></li>
+        <li><a href = "#work" data-page="work">Work</a></li>
+        <li><a href= "#about" data-page="about">About</a></li>
+        <li><a href = "#contact" data-page="contact">Contact</a></li>
       </ul>
-      <img src = "images/Logo.png">
-      <button>Resume</button> 
+      <a href = "../index.html"><img src = "images/Logo.png"></a>
+      <button onclick= "window.open('https://drive.google.com/file/d/1as0afLQcdiaDvE_VA4eYFoWvsxvnQVpq/view?usp=sharing','_blank');">Resume</button> 
     </header>
 
     <!-- Hero Image -->
@@ -48,7 +49,7 @@
         </div>
       </section>
     </section>
-    <hr>
+    <hr id = "startwork">
 
     <!-- My Work -->
     <section class="work" id = "work">
@@ -59,7 +60,7 @@
           <a href = "casestudy/index.html"><img src="images/Project3.png"></a>
       </div>
     </section>
-    <hr>
+    <hr id = "startabout">
 
     <!-- About Me -->
     <section class="about" id = "about">
@@ -67,7 +68,7 @@
       <h1>About Me</h1>
       <p>Hello, I’m Nethra! For most of my life, I have been fascinated with technology and the idea of helping people with the skills I accumulate. Due to that fascination, I studied Computer Science, but at the end of my studies, I felt like something was missing. That’s when I discovered User Experience Design, I learned I could combine my interest in technology and my passion for helping people to create thoughtful products.</p>
     </section>
-    <hr>
+    <hr id = "startcontact">
 
     <!-- Contact Me -->
     <section class="contact" id = "contact">
@@ -94,3 +95,4 @@
   </body>
 
 </html>
+
