--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Homework 17</title>
     <link href="css/style.css" type="text/css" rel="stylesheet">
+
   </head>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="js/index.js"></script>
@@ -55,9 +56,21 @@
     <section class="work" id = "work">
       <h1>My Work</h1>
       <div class="projects">
+
+          <div class = "COH caption">
           <a href = "casestudy/index.html"><img src="images/Project1.png"></a>
+          <a href = "casestudy/index.html"><img src="images/Project1Hover.png" class = "hoverproject"></a>
+          </div>
+        
+          <div class = "Tribi caption">
           <a href = "casestudy/index.html"><img src="images/Project2.png"></a>
+          <a href = "casestudy/index.html"><img src="images/Project2Hover.png" class = "hoverproject"></a>
+          </div>
+
+          <div class = "DHS caption">
           <a href = "casestudy/index.html"><img src="images/Project3.png"></a>
+          <a href = "casestudy/index.html"><img src="images/Project3Hover.png" class = "hoverproject"></a>
+       </div>
       </div>
     </section>
     <hr id = "startabout">
@@ -79,7 +92,7 @@
           <label>Email*</label>
           <input type="email" placeholder="Your Email Address...">
           <label>Message*</label>
-          <textarea type="message" placeholder="Your Message"></textarea>
+          <textarea type="message" placeholder="Your Message..."></textarea>
       </form>
       <button>Submit</button> 
     </section>
