--- a/casestudy/index.html
+++ b/casestudy/index.html
@@ -4,6 +4,12 @@
     <title>casestudy</title>
     <link href="css/style.css" type="text/css" rel="stylesheet">
   </head>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="js/index.js"></script>
+  
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-zoom/1.7.21/jquery.zoom.js"></script>
+  
 
 <body>
   <!-- Navigation, Logo, Resume -->
@@ -66,8 +72,9 @@
 
     <h3>Affinity Diagram</h3>
     <p>To better understand our user research interviews we sorted our users’ responses into an affinity diagram.</p>
-    <img src = "images/AffinityDiagram2.png" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width: 80%; height: auto;">
-
+    <img src = "images/AffinityDiagram2.png" style = "cursor: zoom-in; display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width: 80%; height: auto;">
+      <!-- data-enlargeable width="75%" -->
+   
     <h3>User Research Analysis</h3>
     <p>From these interviews, we learned that it is often difficult for members within the community to find mental health experts that meet specific needs. Often, referrals from trusted friends held the biggest when it came to selecting mental or physical health resources, such as a doctor or therapist.</p>
     <p>Additionally, when we directed participants to the Center On Halsted's website the majority of individuals felt lost and unsure what the goal of the site is.</p>
@@ -140,7 +147,7 @@
     <h3>High-Fidelity Prototypes</h3>
     <p>After thorough user testing, we made improvements to the prototypes and then started building the high-fidelity digital prototype. We continued using Figma throughout this prototyping process.</p>
     <p>Click on screen to view to interact with prototype!</p>
-    <div style = "display: flex; justify-content: space-around; padding-left: 35px; padding-right: 40px; margin-top: 25px">
+    <div style = "display: flex; justify-content: space-around; padding-left: 35px; padding-right: 40px; margin-top: 25px; padding-bottom: 5px;">
       <img src = "images/hi-fi2.gif" style = "width: 70%; height: auto; align-self: center;">
       <img src = "images/Hi-Fi-Mobile.gif" style = "width: 20%; height: auto; align-self: center;">
       </div>
