--- a/casestudy/index.html
+++ b/casestudy/index.html
@@ -147,11 +147,16 @@
     <h3>High-Fidelity Prototypes</h3>
     <p>After thorough user testing, we made improvements to the prototypes and then started building the high-fidelity digital prototype. We continued using Figma throughout this prototyping process.</p>
     <p>Click on screen to view to interact with prototype!</p>
-    <div style = "display: flex; justify-content: space-around; padding-left: 35px; padding-right: 40px; margin-top: 25px; padding-bottom: 5px;">
-      <img src = "images/hi-fi2.gif" style = "width: 70%; height: auto; align-self: center;">
-      <img src = "images/Hi-Fi-Mobile.gif" style = "width: 20%; height: auto; align-self: center;">
+    <div style = "display: flex; justify-content: space-between; padding-left: 35px; padding-right: 30px; margin-top: 35px; margin-bottom: 10px;">
+      <div>
+      <a href = "https://www.figma.com/proto/5wxZORZ4RLXJnRRlqutY8D/Center-on-Halsted?node-id=33%3A564&scaling=contain&page-id=33%3A443&starting-point-node-id=33%3A564" target="_blank" ><img src = "images/hi-fi2.gif" style = "width: 95%; height: auto; align-self: center;"></a>
       </div>
-
+      <div>
+      <a href = "https://www.figma.com/proto/5wxZORZ4RLXJnRRlqutY8D/Center-on-Halsted?node-id=33%3A8641&scaling=contain&page-id=33%3A8406&starting-point-node-id=33%3A8641" target="_blank"><img src = "images/Hi-Fi-Mobile.gif" style = "width: 60%; height: auto; align-self: center;"></a>
+      </div>
+    </div>
+      
+     
       <h2>Reflection</h2>
       <h3>Key Takeaways</h3>
       <p>Our team was dedicated to looking for a nonprofit whose website needed help. Despite being in three different cities across two zones and with different schedules, we met online every day to work together on this project. We each participated in every part of the project, from analyzing the existing site, to doing competitor anyalyses, to writing and conducting interviews, and designing the final prototypes. We learned that we did well working alone and then coming together, combining our ideas and creations, to make something even better than we had conceived of. In this process, we made countless iterations of many of the steps, feeling truly invested in developing an improved site. Our first ideas were not always our best, and we were always open to the challenges of going back to the drawing board multiple times.</p>
