--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <head>
     <title>Homework 17</title>
     <link href="css/style.css" type="text/css" rel="stylesheet">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GPDTPCY50K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GPDTPCY50K');
+</script>
 
   </head>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
