--- a/casestudy/index.html
+++ b/casestudy/index.html
@@ -3,6 +3,15 @@
   <head>
     <title>casestudy</title>
     <link href="css/style.css" type="text/css" rel="stylesheet">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GPDTPCY50K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GPDTPCY50K');
+</script>
   </head>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="js/index.js"></script>
