--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>Homework 17</title>
     <link href="css/style.css" type="text/css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-GPDTPCY50K"></script>
 <script>
