--- a/casestudy/index.html
+++ b/casestudy/index.html
@@ -58,7 +58,7 @@
       </div>
     </nav>
 
-    <a href = "../index.html"><img src = "images/Logo.png"></a>
+    <a href = "../index.html"><img src = "images/Logo.svg"></a>
     <button class = "desktopresumebutton" onclick= "window.open('https://drive.google.com/file/d/1UyVKAKFYHCamh781GeSK_HIFO2iZETZB/view?usp=sharing','_blank');">Resume</button> 
 
   </header>
