--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class = "skillsCard">
           <img src="images/Icon2.png">
           <h2>User Empathy</h2>
-          <p>In order to make products that please and help people,  I understand people on a psychological and emotional level. I do this by observing and engaging with people through user interviews and usability testing and persona creation.</p>
+          <p>In order to make products that please and help people, I understand people on a psychological and emotional level. I do this by observing and engaging with people through user interviews, usability testing, and persona creation.</p>
         </div>
         <div class = "skillsCard">
           <img src="images/Icon3.png">
