--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
           </div>
 
           <div class = "DHS caption">
-          <a href = "casestudy/index.html"><img src="images/Project3.png"></a>
-          <a href = "casestudy/index.html"><img src="images/Project3Hover.png" class = "hoverproject"></a>
+          <a href = "casestudy3/index.html"><img src="images/Project3.png"></a>
+          <a href = "casestudy3/index.html"><img src="images/Project3Hover.png" class = "hoverproject"></a>
        </div>
       </div>
     </section>
