--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
           </div>
         
           <div class = "Tribi caption">
-          <a href = "casestudy/index.html"><img src="images/Project2.png"></a>
-          <a href = "casestudy/index.html"><img src="images/Project2Hover.png" class = "hoverproject"></a>
+          <a href = "casestudy2/index.html"><img src="images/Project2.png"></a>
+          <a href = "casestudy2/index.html"><img src="images/Project2Hover.png" class = "hoverproject"></a>
           </div>
 
           <div class = "DHS caption">
