--- a/casestudy/index.html
+++ b/casestudy/index.html
@@ -99,19 +99,18 @@
    
     <h2>The Design Process</h2>
     <p>We followed a User Centered Design Process.</p>
-    <img src = "images/Process.png" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px;">
+    <img src = "images/Process.svg" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px;">
 
     <h2>Step 1: User Research</h2>
     <p>We first conducted  6 virtual interviews with members of the LBGTQ community to find answers to how we might be able to help simplify the process of finding LGBTQ resources for members of the community.</p>
 
     <h3>User Interviews</h3>
-    <img src = "images/UserInterview2.png" style = "margin-top: 30px; margin-left: 10px;">
-    <p style = "margin: 0; padding: 0; text-align: right;"><img src = "images/UserInterview1.png" style = "margin-top: 25px; margin-right: 10px;"></p>
+    <img src = "images/UserInterview1.svg" style = "margin-top: 30px; margin-left: 10px;">
+    <p style = "margin: 0; padding: 0; text-align: right;"><img src = "images/UserInterview2.svg" style = "margin-top: 25px; margin-right: 10px;"></p>
 
     <h3>Affinity Diagram</h3>
     <p>To better understand our user research interviews we sorted our users’ responses into an affinity diagram.</p>
-    <img src = "images/AffinityDiagram2.png" style = "cursor: zoom-in; display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width: 80%; height: auto;">
-      <!-- data-enlargeable width="75%" -->
+    <img src = "images/AffinityDiagram.png" style = "cursor: zoom-in; display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width: 80%; height: auto;">
    
     <h3>User Research Analysis</h3>
     <p>From these interviews, we learned that it is often difficult for members within the community to find mental health experts that meet specific needs. Often, referrals from trusted friends held the biggest when it came to selecting mental or physical health resources, such as a doctor or therapist.</p>
@@ -126,7 +125,7 @@
 
     <h3>Key Findings</h3>
     <p>I analyzed my research data and learned the following:</p>
-    <img src = "images/Findings.png" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width: 65%; height: auto;">
+    <img src = "images/Findings.svg" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width: 65%; height: auto;">
 
     <h3>User Insight</h3>
     <p><span class = "highlight">A person in the LGBTQ community</span> needs <span class = "highlight">group therapy resources that meet their specific needs</span> because they weren’t able to get enough referrals from trusted friends, due to the pandemic.</p>
@@ -150,7 +149,7 @@
 
     <h3>Our Solutions</h3>
     <p>Based on value and effort the solutions my team and I came up with are the following:</p>
-    <img src = "images/Solutions.png" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width: 65%; height: auto;">
+    <img src = "images/Solutions.svg" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width: 65%; height: auto;">
   
     <h3>Site Map</h3>
     <p>Based on our initial observations when users interacted with current website, we knew the informational architecture would need rework. We created 28 cards to be sorted into categories by users and analyzed the results to formulate a draft information architecture in the form of a Site Map:</p>
@@ -177,18 +176,17 @@
     <h3>Prototype Testing</h3>
     <p>Once our low-fidelity prototypes were ready, we moved to testing our design, which involved users completing tasks and providing their feedback.</p>
     <p>The tasks we asked users to perform were the following:</p>
-    <!-- <img src = "images/Testing.png" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 18px; margin-bottom: 25px; width: 45%; height: auto;"> -->
     <div style = "margin-top: 25px; width: fit-content; margin-left: auto; margin-right: auto;">
       <div style = "display: flex; align-items: center;">
-          <img src = "images/1.png" style = "padding-right: 15px;">
+          <img src = "images/1.svg" style = "padding-right: 15px;">
           <p style = "margin-top: 0; padding-left: 15px;">Locate information on Youth Programs</p>
       </div>
       <div style = "display: flex; align-items: center; margin-top: 20px;">
-          <img src = "images/2.png" style = "padding-right: 15px;">
+          <img src = "images/2.svg" style = "padding-right: 15px;">
           <p style = "margin-top: 0; padding-left: 15px;">Locate information on Behavior Health Programs</p>
       </div>
       <div style = "display: flex; align-items: center; margin-top: 20px;">
-          <img src = "images/3.png" style = "padding-right: 15px;">
+          <img src = "images/3.svg" style = "padding-right: 15px;">
           <p style = "margin-top: 0; padding-left: 15px;">State the purpose of Center on Halsted</p>
       </div>
     </div>
@@ -201,7 +199,7 @@
     <p>Click on screen to view to interact with prototype!</p>
     <div style = "display: flex; justify-content: space-between; padding-left: 35px; padding-right: 30px; margin-top: 35px; margin-bottom: 10px;">
       <div>
-        <a href = "https://www.figma.com/proto/5wxZORZ4RLXJnRRlqutY8D/Center-on-Halsted?node-id=33%3A564&scaling=contain&page-id=33%3A443&starting-point-node-id=33%3A564" target="_blank" ><img src = "images/hi-fi2.gif" style = "width: 95%; height: auto; align-self: center;"></a>
+        <a href = "https://www.figma.com/proto/5wxZORZ4RLXJnRRlqutY8D/Center-on-Halsted?node-id=33%3A564&scaling=contain&page-id=33%3A443&starting-point-node-id=33%3A564" target="_blank" ><img src = "images/Hi-Fi.gif" style = "width: 95%; height: auto; align-self: center;"></a>
       </div>
       <div>
         <a href = "https://www.figma.com/proto/5wxZORZ4RLXJnRRlqutY8D/Center-on-Halsted?node-id=33%3A8641&scaling=contain&page-id=33%3A8406&starting-point-node-id=33%3A8641" target="_blank"><img src = "images/Hi-Fi-Mobile.gif" style = "width: 60%; height: auto; align-self: center;"></a>
