--- a/casestudy2/index.html
+++ b/casestudy2/index.html
@@ -94,18 +94,18 @@
       
     <h2>The Design Process</h2>
     <p>We followed a User Centered Design Process.</p>
-    <img src = "images/Process.png" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px;">
+    <img src = "images/Process.svg" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px;">
 
     <h2>Step 1: User Research</h2>
     <p>We first conducted  5 virtual interviews and  surveyed 29 participants, ages 24-58, who are familiar with payment apps to find answers to how we might be able to help simplify the process of paying in groups.</p>
 
     <h3>User Interviews</h3>
-    <img src = "images/Interview1.png" style = "margin-top: 30px; margin-left: 10px;">
-    <p style = "margin: 0; padding: 0; text-align: right;"><img src = "images/Interview2.png" style = "margin-top: 25px; margin-right: 10px;"></p>
+    <img src = "images/Interview1.svg" style = "margin-top: 30px; margin-left: 10px;">
+    <p style = "margin: 0; padding: 0; text-align: right;"><img src = "images/Interview2.svg" style = "margin-top: 25px; margin-right: 10px;"></p>
 
     <h3>Affinity Diagram</h3>
     <p>To better understand our user research interviews we sorted our users’ responses into an affinity diagram.</p>
-    <img src = "images/AffinityDiagram.png" style = "cursor: zoom-in; display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width: 80%; height: auto;">
+    <img src = "images/AffinityDiagram.svg" style = "cursor: zoom-in; display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width: 80%; height: auto;">
       
     <h3>User Research Analysis</h3>
     <p>From these interviews, we learned that users were uncomfortable talking about money with friends; in other words, they often don’t openly communicate about group savings or purchases with other group members. From our surverys we learned 79% of users don’t have tool to help them through group purchases. Users need a way to conveniently manage finances in a group or pair because transactions can be complicated to balance.</p>
@@ -115,11 +115,11 @@
 
     <h3>Persona Creation</h3>
     <p>Based on my gathered research data, I formulated the following Persona:</p>
-    <img src = "images/UserPersona.png" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width: 80%; height: auto;">
+    <img src = "images/UserPersona.svg" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width: 80%; height: auto;">
 
     <h3>Key Findings</h3>
     <p>I analyzed my research data and learned the following:</p>
-    <img src = "images/Findings.png" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width: 65%; height: auto;">
+    <img src = "images/Findings.svg" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width: 65%; height: auto;">
 
     <h3>User Insight</h3>
     <p>Users need a way to conveniently <span class = "highlight">manage finances in a group or pair</span> because transactions can be complicated to balance.</p>
@@ -147,20 +147,20 @@
 
     <h3>Our Solutions</h3>
     <p>We noticed Paypal and Gofundme had distinctive features which satisfied the need to pay conveniently on a web browser without downloading the app, and returning funds if the goal was not reached.  Through our feature  prioritization matrix, we decided to go even further by getting all the contributions upfront before the purchase is made, since users expressed the need for knowing from the get go how much things would cost.</p>
-    <img src = "images/Solutions.png" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width: 65%; height: auto;">
+    <img src = "images/Solutions.svg" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width: 65%; height: auto;">
   
     <h3>User Flow</h3>
     <p>Our group created 3 different user flows because we wanted to base it off different scenarios. Each flow gives a different point of view as if you were the user.</p>
     <div style = "margin-left: 3%;">
       <h3>1. Group Creater</h3>
       <p>The first flow is in the perspective of the group creater. The group creater can either sent a goal amount for their group or set it as unlimited amount and send a link to their friends to pitch in. Once the group reaches their goal or, if there is no goal set, once the group creator closes the group, the group creator will have the pool of money to make the group purchase.</p>
-      <img src = "images/Flow1.png" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width:100%;">
+      <img src = "images/Flow1.svg" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width:100%;">
       <h3>2. Group Member</h3>
       <p>This is the perspective of receiving a link from a friend. Since we noticed users were uncomfortable talking about money with others, we sought a solution to try to alleviate the pain point. Once the user clicks on the link we would have a screen describing the purchase and who is participating so that way users can think of the idea of purchase, not just the payment as the first interaction.</p>
-      <img src = "images/Flow2.png" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width:100%;">
+      <img src = "images/Flow2.svg" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width:100%;">
       <h3>3. On a website</h3>
       <p>The third flow is for fullfilling the need of users to pay simultanesously on the spot. This user flow is in the perspective of a user making a payment on a website using the Tribi payment option.</p>
-      <img src = "images/Flow3.png" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width:100%;">
+      <img src = "images/Flow3.svg" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width:100%;">
     </div>
 
     <h3>User Journey Map</h3>
@@ -196,34 +196,34 @@
     <div style = "margin-top: 25px; width: fit-content; margin-left: auto; margin-right: auto;">
       <p style = "margin-bottom: 10px; font-weight: 600; text-decoration: underline;">Group Creator Flow</p>
       <div style = "display: flex; align-items: center;">
-          <img src = "images/1.png" style = "padding-right: 15px;">
+          <img src = "images/1.svg" style = "padding-right: 15px;">
           <p style = "margin-top: 0; padding-left: 15px;">Create a group, set a goal amount of $30, invite members</p>
       </div>
       <div style = "display: flex; align-items: center; margin-top: 20px;">
-          <img src = "images/2.png" style = "padding-right: 15px;">
+          <img src = "images/2.svg" style = "padding-right: 15px;">
           <p style = "margin-top: 0; padding-left: 15px;">Contribute $5 and reach your goal of $30. (task 1 continued)</p>
       </div>
       <div style = "display: flex; align-items: center; margin-top: 20px;">
-          <img src = "images/3.png" style = "padding-right: 15px;">
+          <img src = "images/3.svg" style = "padding-right: 15px;">
           <p style = "margin-top: 0; padding-left: 15px;">Create a group. Set an indefinite amount to raise, invite members</p>
       </div>
       <div style = "display: flex; align-items: center; margin-top: 20px; margin-bottom: 30px;">
-        <img src = "images/4.png" style = "padding-right: 15px;">
+        <img src = "images/4.svg" style = "padding-right: 15px;">
         <p style = "margin-top: 0; padding-left: 15px;">Contribute $5, raise an indefinite amount and close account once you reach $30 (task 3 continued)</p>
       </div>
       <p style = "margin-bottom: 10px; font-weight: 600; text-decoration: underline;">Group Member Flow</p>
       <div style = "display: flex; align-items: center; margin-bottom: 30px;">
-        <img src = "images/5.png" style = "padding-right: 15px;">
+        <img src = "images/5.svg" style = "padding-right: 15px;">
         <p style = "margin-top: 0; padding-left: 15px;">Contribute money to group and approve transfer</p>
       </div>
       <p style = "margin-bottom: 10px; font-weight: 600; text-decoration: underline;">Pay Simultaneously Flow</p>
       <div style = "display: flex; align-items: center; margin-bottom: 30px;">
-        <img src = "images/6.png" style = "padding-right: 15px;">
+        <img src = "images/6.svg" style = "padding-right: 15px;">
         <p style = "margin-top: 0; padding-left: 15px;">Make a group contribution by adding friends</p>
       </div>
       <p style = "margin-bottom: 10px; font-weight: 600; text-decoration: underline;">Friends Open Link Flow</p>
       <div style = "display: flex; align-items: center;">
-        <img src = "images/7.png" style = "padding-right: 15px;">
+        <img src = "images/7.svg" style = "padding-right: 15px;">
         <p style = "margin-top: 0; padding-left: 15px;">Open a link and make a group purchase</p>
       </div>
     </div>
@@ -233,11 +233,11 @@
     <p>Our iterated user flows:</p>
     <div style = "margin-left: 3%;">
       <h3>1. Group Creater</h3>
-      <img src = "images/IteratedFlow1.png" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width:100%;">
+      <img src = "images/IteratedFlow1.svg" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width:100%;">
       <h3>2. Group Member</h3>
-      <img src = "images/IteratedFlow2.png" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width:100%;">
+      <img src = "images/IteratedFlow2.svg" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width:100%;">
       <h3>3. On a website</h3>
-      <img src = "images/IteratedFlow3.png" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width:100%;">
+      <img src = "images/IteratedFlow3.svg" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width:100%;">
     </div>
 
     <h3>High-Fidelity Prototypes</h3>
