--- a/casestudy3/index.html
+++ b/casestudy3/index.html
@@ -87,21 +87,21 @@
     
         <h2>The Design Process</h2>
         <p>We followed a User Centered Design Process.</p>
-        <img src = "images/Process.png" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px;">
+        <img src = "images/Process.svg" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px;">
 
         <h2>Step 1: User Research</h2>
         <p>I first conducted 5 virtual usability tests with various demographics to find answers to how I might be able to help improve the process of finding resources within the current Department of Homeland Security Website. I asked users to perform 3 tasks:</p>
         <div style = "margin-top: 25px; width: fit-content; margin-left: auto; margin-right: auto;">
             <div style = "display: flex; align-items: center;">
-                <img src = "images/1.png" style = "padding-right: 15px;">
+                <img src = "images/1.svg" style = "padding-right: 15px;">
                 <p style = "margin-top: 0; padding-left: 15px;">Find the list of items you can bring on a plane</p>
             </div>
             <div style = "display: flex; align-items: center; margin-top: 20px;">
-                <img src = "images/2.png" style = "padding-right: 15px;">
+                <img src = "images/2.svg" style = "padding-right: 15px;">
                 <p style = "margin-top: 0; padding-left: 15px;">Identify all the item categories (related to the list on task 1)</p>
             </div>
             <div style = "display: flex; align-items: center; margin-top: 20px;">
-                <img src = "images/3.png" style = "padding-right: 15px;">
+                <img src = "images/3.svg" style = "padding-right: 15px;">
                 <p style = "margin-top: 0; padding-left: 15px;"> Get to the page with information about how to obtain a visitor visa</p>
             </div>
         </div>
@@ -124,7 +124,7 @@
 
         <h3>Key Findings</h3>
         <p>I analyzed my research data and learned the following:</p>
-        <img src = "images/Findings.png" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width: 65%; height: auto;">
+        <img src = "images/Findings.svg" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width: 65%; height: auto;">
 
         <h3>User Insight</h3>
         <p><span class = "highlight">A person traveling to the United States</span> needs <span class = "highlight">specific resources to ensure safety while traveling</span> because they weren’t able to get credible information from friends.</p>
@@ -140,7 +140,7 @@
 
         <h3>Our Solutions</h3>
         <p>Based on value and effort the solutions my team and I came up with are the following:</p>
-        <img src = "images/Solutions.png" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width: 65%; height: auto;">
+        <img src = "images/Solutions.svg" style = "display: block; margin-left: auto; margin-right: auto; margin-top: 25px; width: 65%; height: auto;">
     
         <h3>Card Sorting</h3>
         <p>Based on our initial observations when users interacted with current website, we knew the informational architecture would need rework. We created 76 cards to be sorted into categories by and analyzed the results to formulate a draft information architecture in the form of a Site Map:</p>
@@ -164,15 +164,15 @@
         <p>The tasks we asked users to perform were the following:</p>
         <div style = "margin-top: 25px; width: fit-content; margin-left: auto; margin-right: auto;">
             <div style = "display: flex; align-items: center;">
-                <img src = "images/1.png" style = "padding-right: 15px;">
+                <img src = "images/1.svg" style = "padding-right: 15px;">
                 <p style = "margin-top: 0; padding-left: 15px;">Locate information becoming a citizen</p>
             </div>
             <div style = "display: flex; align-items: center; margin-top: 20px;">
-                <img src = "images/2.png" style = "padding-right: 15px;">
+                <img src = "images/2.svg" style = "padding-right: 15px;">
                 <p style = "margin-top: 0; padding-left: 15px;">What do you expect to find on the blue cards?</p>
             </div>
             <div style = "display: flex; align-items: center; margin-top: 20px;">
-                <img src = "images/3.png" style = "padding-right: 15px;">
+                <img src = "images/3.svg" style = "padding-right: 15px;">
                 <p style = "margin-top: 0; padding-left: 15px;">What do you expect to find on the white cards?</p>
             </div>
         </div>
