--- a/index.html
+++ b/index.html
@@ -60,9 +60,14 @@
 
     <!-- Hero Image -->
     <section class="heroImg" id = "home">
-      <img src="images/ProfilePicture.png">
-      <h1>Hi, I'm Nethra. <br> A User Experience Designer</h1>
-      <p>I’m an empath-driven product designer and enjoy solving user problems by creating beautiful and thoughtful designs that help people reach their goals.</p> 
+      <div>
+        <h1>Hi, I'm Nethra. <br> A User Experience Designer</h1>
+        <p><br><br>I’m an empath-driven product designer and enjoy solving user problems by creating beautiful and thoughtful designs that help people reach their goals.</p> 
+      </div>
+
+      <div>
+        <img src="images/ProfilePicture.png">
+      </div>
     </section>
     <hr>
 
